@@ -1,13 +1,23 @@
 <?php
-	$title = "DOM (Document Object Model)";
-	include("../../header.inc");
+    $title = "DOM (Document Object Model)";
+    include("../../header.inc");
 ?>
 <h2>DOM (Document Object Model)</h2>
 
-<p>
-Needs to be written.
-</p>
+<h3>Overview</h3>
+
+<p>The Document Object Model (DOM) is a <a href="http://www.w3.org/DOM/DOMTR">standardized</a> software interface that allows code written in JavaScript and other languages to interact with the contents of an HTML document. The Document Object Model consists of a series of classes that represent HTML elements, events, and so on, each of which contains methods that operate on those elements or events.</p>
+
+<h3>Get Involved!</h3>
+
+<ul>
+<li><a href="https://bugs.webkit.org/buglist.cgi?product=WebKit&amp;component=HTML%20DOM&amp;component=XML%20DOM&amp;resolution=---">View bugs in the HTML DOM and XML DOM component in Bugzilla.</a>
+
+<li>If you find a DOM bug in the <a href="http://nightly.webkit.org/">latest nightly build</a> of WebKit, please <a href="../../quality/reporting.html">file a bug report</a>.
+
+<li>Development discussions take place on Freenode IRC in <a href="irc://irc.freenode.net/#webkit">#webkit</a>.
+</ul>
 
 <?php
-	include("../../footer.inc");
+    include("../../footer.inc");
 ?>
