@@ -1,3 +1,12 @@
+2008-07-26  Robert Blaut  <webkit@blaut.biz>
+
+        Reviewed by Adele Petersen.
+
+        Fix for bug 7436: Truncated title on webkit DOM page.
+        <https://bugs.webkit.org/show_bug.cgi?id=7436>
+
+        * projects/dom/index.html: Added basic project informations.
+
 2008-07-24  Adam Roben  <aroben@apple.com>
 
         Remove some redundant text accidentally checked in
